--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <meta charset="UTF-8">
 <title>Crystals Collector Game</title>
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<script src="assets/javascript/game.js"></script>
+
 <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -12,7 +18,7 @@
 <h1>CrystalsCollector!</h1>
 
 
-<div id="textbox">
+<div id="text-box">
 	<p>You will be given a random number at the start of the game.</p>
 	<p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
 	<p>You will win the game by matching your total score to a random number. You lose the game if your total score goes above the random number.</p>
@@ -20,13 +26,16 @@
 	<p>Each time when the game starts, the game will change the values of each crystal.</p>
 </div>
 
-	<p id="randomscoretext">Match this score:</p>
-<div id="scorebox">
+<p>Press to start: </p>
+<button id="random-button" class="btn btn-primary btn-lg"><h1><span class="glyphicon glyphicon-play"></span></h1></button>
+
+	<p id="random-score-text">Match this score:</p>
+<div id="score-box">
 
 </div>
 
 
-<div id="scorecountbox">
+<div id="score-count-box"
 	<p id="Wins"> Wins: </p>
 	<p id="Losses"> Losses: </p>
 
@@ -34,21 +43,21 @@
 </div>
 <br>
 
-<div id="crystalbox">
+<div id="crystal-box">
 	
-	<img src="assets/images/crystal-1.jpg">
+	<img id="crystal1" src="assets/images/crystal-1.jpg">
 
-	<img src="assets/images/crystal-2.jpg">
+	<img id="crystal2" src="assets/images/crystal-2.jpg">
 
-	<img src="assets/images/crystal-3.jpg">
+	<img id="crystal3" src="assets/images/crystal-3.jpg">
 
-	<img src="assets/images/crystal-4.jpg">
+	<img id="crystal4" src="assets/images/crystal-4.jpg">
 
 </div>
 
-	<p id="scoretext">Your total score is: </p>
+	<p id="score-text">Your total score is: </p>
 
-<div id="totalscore">
+<div id="total-score">
 
 </div>
 
