--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 </div>
 
 
-<div id="score-count-box"
-	<p id="Wins"> Wins: </p>
-	<p id="Losses"> Losses: </p>
+<div id="score-count-box">
+	<p id="wins"> Wins: </p>
+	<p id="losses"> Losses: </p>
+
 
 
 </div>
