centered some divs

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 	<p>Each time when the game starts, the game will change the values of each crystal.</p>
 </div>
 
-<p>Press to start: </p>
-<button id="random-button" class="btn btn-primary btn-lg"><h1><span class="glyphicon glyphicon-play"></span></h1></button>
+<div id="start-button">
+	<p id="start-text">Press to start: </p>
+	<button id="random-button" class="btn btn-primary btn-lg"><h1><span class="glyphicon glyphicon-play"></span></h1></button>
+</div>
 
 	<p id="random-score-text">Match this score:</p>
 <div id="score-box">
